# forgevault-ai

./: .gitignore  LICENSE.md  Living Manifesto  README.md
dashboard/: index.html
orchestrator/: Cargo.toml
orchestrator/orchestrator/orchestrator/tests/: mint_test.rs
orchestrator/orchestrator/src/: lib.rs
orchestrator/orchestrator/src/orchestrator/: Cargo.toml
orchestrator/orchestrator/src/orchestrator/a2a/: discovery.json
orchestrator/orchestrator/src/orchestrator/a2a/contracts/: receipt_token.rs
orchestrator/orchestrator/src/orchestrator/a2a/contracts/hyperliquid/: adapter.rs
orchestrator/orchestrator/src/orchestrator/a2a/contracts/hyperliquid/compute/: render_job_template.json
orchestrator/orchestrator/src/orchestrator/a2a/contracts/hyperliquid/compute/dashboard/: index.html
orchestrator/orchestrator/src/orchestrator/a2a/contracts/hyperliquid/compute/dashboard/docs/: reward_math.md
